Fixes disappearing HubSpot messages on Firefox (#881)

--- a/web/wp-content/themes/lfevents/src/assets/scss/components/_forms.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/components/_forms.scss
@@ -3,6 +3,10 @@ div.hs_recaptcha,
   display: none;
 }
 
+.hs-form-iframe {
+  min-height: 80px;
+}
+
 .hbspt-form .hs-form {
   display: flex;
   flex-direction: column;
